# shoptools

./: .env.example  Cargo.toml  README.md  discounts.json  products.json  temp.json
docs/superpowers/specs/: 2026-07-04-shopli-cli-design.md
src/: bulk.rs  cli.rs  client.rs  config.rs  lib.rs  main.rs
src/commands/: clone.rs  export.rs  import.rs  mod.rs  query.rs  store.rs
src/resource/: customer.rs  delivery_profile.rs  discount.rs  giftcard.rs  metaobject.rs  mod.rs  product.rs  store_credit.rs
